[package]
name = "p2p3"
version = "0.1.0"
authors = ["Matthew Kellogg <kellogg92@gmail.com>"]

[dependencies]
iron="*"
crust = { git = "https://github.com/maidsafe/crust.git"}
maidsafe_utilities = "~0.5.0"
nat_traversal = "~0.3.2"
net2 = "~0.2.22"
rand = "~0.3.14"
rustc-serialize = "~0.3.18"
service_discovery = "~0.3.0"
socket_addr = "~0.1.0"
sodiumoxide = "~0.0.9"
temp_utp = "~0.8.0"
term = "~0.4.4"
time = "~0.1.34"
quick-error = "1.0.0"
docopt = "~0.6.78"
void = "~1.0.1"
config_file_handler = "~0.3.0"
itertools = "~0.4.10"
get_if_addrs = "~0.4.0"
