[package]
name = "p2p3"
version = "0.1.5"
authors = ["Matthew Kellogg <kellogg92@gmail.com>"]

[dependencies]
iron="*"
crust = { git = "https://github.com/maidsafe/crust.git"}
maidsafe_utilities = "~0.5.0"
time = "~0.1.34"
docopt = "~0.6.78"
rustc-serialize = "~0.3.18"
service_discovery = "~0.3.0"
bincode = "*"
gcc = "*"
